<resources>
    <string name="app_name">GL3AMS</string>
    <string name="title_activity_maps">Home</string>
    <string name="message_service">Message Favorites</string>
    <string name="alarm_service">New Service</string>
    <string name="update_system">Status</string>
    <string name="settings">Settings</string>
    <string name="favorites">Alarm Favorites</string>
    <string name="destination">Destination:</string>
    <string name="distance_from_location">Distance:</string>
    <string name="act_dist">Activation Distance:</string>
    <string name="emptyStatus">Not currently tracking.</string>
    <string name="start">Start</string>
    <string name="cancel">Stop</string>
    <string name="miles"> mi.</string>
    <string name="fare">Fares</string>
    <string name="ferries">Ferries</string>
    <string name="tolls">Tolls</string>
    <string name="avoid_routes">Avoid:</string>
    <string name="smsInfoField">SMS:</string>
    <string name="acceptSMSButton">Add New SMS:</string>
    <string name="defaultAppend">This message automatically sent by GL3AMS.</string>
    <string name="confirmAlarmInfo">Confirm Info</string>
    <string name="radioButtonText">Save Info to Favorites</string>
    <string name="saveRadioText">Save Info to Favorites</string>
    <string name="useRadioText">Do Not Save</string>
    <string name="fromSaveToFavoritesButton">saveToFavoritesButton</string>
    <string name="fromFavoriteMessages">addToFavoriteMessages</string>
    <string name="fromAlarmActivityNext">fromOnNextAlarmActivity</string>
</resources>
