<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:background="#434343"
    android:id="@+id/main"
    tools:context=".MapsActivity">

    <ImageView
        android:id="@+id/infoButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/info"
        android:background="@drawable/btn_click_event"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutMainMenu">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/alarmImage"
                android:background="@drawable/btn_click_event"
                android:src="@drawable/alarm_text_icon"
                android:clickable="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_service"
                android:textColor="@color/text_color"
                android:layout_marginTop="10dp"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/favoritesImage"
                android:background="@drawable/btn_click_event"
                android:src="@drawable/favorites" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="Service Favorites"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dp"/>



        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/textImage"
                android:background="@drawable/btn_click_event"
                android:src="@drawable/message_favorites"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_service"
                android:textColor="@color/text_color"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
               />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/currentActivityImage"
                android:background="@drawable/btn_click_event"
                android:src="@drawable/map4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/update_system"
                android:textColor="@color/text_color"
                android:layout_gravity="top"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
