<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="superheroesintechnology.gl3am.Activities.UpdateActivity"
    android:background="@color/primaryBackGroundColor">

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="Status"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/startStopText"
        android:layout_gravity="center"
        android:layout_below="@+id/statusTitle"
        android:weightSum="4">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destinationTextView"
                android:text="@string/destination"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/destinationResultTextView"
                android:text=""
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/defDistTextView"
                android:text="@string/act_dist"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/defDistResultTextView"
                android:text=""
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distFromDestTextView"
                android:text="@string/distance_from_location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/distFromDestResultTextView"
                android:text=""
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            // Below can be removed before final product is completed. For testing purposes only.
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booleanTextView"
                android:text="Estimated Time:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center"/>
            //the below textview is only or testing
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/booleanResultTextView"
                android:text=""
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/alarmAppNavLinearLayout">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/favoritesStatusImage"
            android:src="@drawable/favorites"
            android:layout_gravity="bottom"
            android:scaleType="centerInside"
            android:background="@drawable/btn_click_event"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/alarmStatusImage"
            android:src="@drawable/alarm_text_icon"
            android:layout_gravity="bottom"
            android:scaleType="centerInside"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/btn_click_event"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/homeStatusImage"
            android:src="@drawable/home"
            android:clickable="false"
            android:scaleType="centerInside"
            android:background="@drawable/btn_click_event"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/messageStatusImage"
            android:src="@drawable/message_favorites"
            android:layout_gravity="bottom"
            android:scaleType="centerInside"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_click_event"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/statusStatusImage"
            android:src="@drawable/map4"
            android:layout_gravity="bottom"
            android:scaleType="centerInside"
            android:background="@drawable/btn_click_event"/>

    </LinearLayout>
    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/start"
        android:id="@+id/startStopAlarmImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/alarmAppNavLinearLayout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startStopText"
        android:textColor="@color/text_color"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/startStopAlarmImageView"/>

</RelativeLayout>
